added doc for cart
